--- a/todo
+++ b/todo
@@ -3,9 +3,9 @@ TODO:
 // create the rest of the drain shapes
 //set shape colors
 //position drains along the edges (wthin bounds)
-smart spawner (random location not touching a drain)
-lose a life if drag to the wrong drain
-lose a life if shape not drained in time (and remove shape)
+//smart spawner (random location not touching a drain)
+//lose a life if drag to the wrong drain
+//lose a life if shape not drained in time (and remove shape)
 inscrease spawn rate per level
 smart spawning of shapes based on drains available
 add score visiblity object
