--- a/todo
+++ b/todo
@@ -23,4 +23,4 @@ Also:
 particle effects...
 
 And:
-draw tutorial arrow pointing from first spawn (always center) to drain. (remove after level?)
+//draw tutorial arrow pointing from first spawn (always center) to drain. (remove after level?)
